--- a/packages/@sanity/components/src/edititem/styles/PopOver.css
+++ b/packages/@sanity/components/src/edititem/styles/PopOver.css
@@ -23,6 +23,7 @@
   --array--add-item-triangle-color: color(var(--form-builder--array--add-item-color) lightness(-20%));
 }
 
+/*
 .root {
   padding: 0;
 
@@ -42,8 +43,10 @@
     overflow: scroll;
   }
 }
+*/
 
 .inner {
+  /*
   display: block;
   z-index: var(--zindex-portal);
   position: fixed;
@@ -52,6 +55,7 @@
   box-sizing: border-box;
   height: 100vh;
   width: 100vw;
+  */
 }
 
 .autoWidth {
@@ -73,7 +77,7 @@
   display: block;
   cursor: default;
   z-index: 1;
-
+  display: none;
   @media (--max-screen-medium) {
     display: none;
   }
@@ -100,17 +104,20 @@
   }
 }
 
-.portalModal {
+.modal {
+  position: absolute;
+  top: 0;
+  left: 0;
   composes: shadow-5dp from "part:@sanity/base/theme/shadows-style";
   background-color: var(--component-bg);
   z-index: calc(var(--zindex-popover) + 3);
   padding: 0;
   margin-bottom: var(--large-padding);
   box-sizing: border-box;
-  position: relative;
   min-width: 30em;
-  max-width: 80vw;
+  max-width: 100vw;
   transition: transform 0.25s cubic-bezier(0.77, 0, 0.175, 1); /* easeInOutQuart */
+  border: 1px solid red;
 
   @nest .fullWidth & {
     min-width: 100%;
@@ -135,7 +142,7 @@
 }
 
 .portalModalFullHeight {
-  composes: portalModal;
+  composes: modal;
   height: 100vh;
   max-height: 100vh;
   margin: 0;
@@ -211,9 +218,4 @@
 
 .primaryFunctions {
   margin-top: 1em;
-}
-
-.paddingDummy {
-  padding: 0;
-  margin: 0;
 }
