--- a/packages/@sanity/form-builder/src/inputs/BlockEditor-slate/styles/contentStyles/ListItem.css
+++ b/packages/@sanity/form-builder/src/inputs/BlockEditor-slate/styles/contentStyles/ListItem.css
@@ -8,6 +8,42 @@
   padding: 0 0 0.5em 1.1em;
 }
 
+.level-2 {
+  margin-left: 3em;
+}
+
+.level-3 {
+  margin-left: 6em;
+}
+
+.level-4 {
+  margin-left: 9em;
+}
+
+.level-5 {
+  margin-left: 12em;
+}
+
+.level-6 {
+  margin-left: 16em;
+}
+
+.level-7 {
+  margin-left: 18em;
+}
+
+.level-8 {
+  margin-left: 21em;
+}
+
+.level-9 {
+  margin-left: 24em;
+}
+
+.level-10 {
+  margin-left: 27em;
+}
+
 .root > * {
   display: block;
   margin: 0 0 1em 0;
@@ -25,6 +61,37 @@
 
 .bullet {
   composes: root;
+
+  @nest &.level-2 > * {
+    @nest &:before {
+      content: '\25CB ';
+    }
+  }
+  @nest &.level-3 > * {
+    @nest &:before {
+      content: '\25A0 ';
+    }
+  }
+  @nest &.level-5 > * {
+    @nest &:before {
+      content: '\25CB ';
+    }
+  }
+  @nest &.level-6 > * {
+    @nest &:before {
+      content: '\25A0 ';
+    }
+  }
+  @nest &.level-8 > * {
+    @nest &:before {
+      content: '\25CB ';
+    }
+  }
+  @nest &.level-9 > * {
+    @nest &:before {
+      content: '\25A0 ';
+    }
+  }
 }
 
 .bullet > * {
