--- a/packages/@sanity/components/src/previews/styles/CreateDocumentPreview.css
+++ b/packages/@sanity/components/src/previews/styles/CreateDocumentPreview.css
@@ -6,12 +6,19 @@
   text-decoration: none;
   position: relative;
   background-color: var(--component-bg);
-  color: var(--text-color-secondary);
-  border-radius: var(--border-radius-medium);
+  border-radius: var(--border-radius-small);
   border: 1px solid var(--hairline-color);
   height: 100%;
   box-sizing: border-box;
   padding: var(--medium-padding);
+
+  @media (hover: hover) {
+    color: var(--text-color-secondary);
+
+    @nest &:hover {
+      color: var(--text-color);
+    }
+  }
 
   @nest &:focus {
     background-color: var(--component-bg);
@@ -29,20 +36,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: var(--medium-padding);
+  min-height: calc(2.4376em);
 }
 
 .title {
   font-weight: normal;
   font-size: var(--font-size-base);
+  line-height: calc(21 / 16);
   padding: 0;
   margin: 0;
 }
 
 .subtitle {
-  color: var(--text-color-secondary);
   font-weight: normal;
   font-size: var(--font-size-xsmall);
+  line-height: calc(15 / 12);
   padding: 0;
   margin: 0;
 }
@@ -52,11 +60,12 @@
   display: flex;
   align-items: flex-start;
   font-size: var(--icon-size);
-  padding: 0 0 0 var(--medium-padding);
+  padding: calc(var(--small-padding) - 1px);
 }
 
 .description {
   composes: subtitle;
+  opacity: 0.7;
 }
 
 .root .description {
